--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>VideoGPA | Visual Quality & Optimization Framework</title>
+    <title>VideoGPA | Video Geometric Preference Alignment</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@300;400;600;700&display=swap" rel="stylesheet">
@@ -45,7 +45,7 @@
 
         <div class="relative max-w-5xl mx-auto text-center">
             <h1 class="text-4xl md:text-6xl font-black mb-8 tracking-tighter italic text-white">
-                VideoGPA: Distilling Geometry Priors for 3D-Consistent Video Generation
+                Distilling Geometry Priors for 3D-Consistent Video Generation
             </h1>
 
             
