--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
             {
                 url: "assets/si2v/01c4ec98.mp4",
                 desc: "",
-                prompt: "The video shows a series of residential scenes in Westerville, OH, focusing on the maintenance of air conditioning units and utility boxes. Initially, two gray air conditioners are seen on a concrete slab, connected to a white electrical box and a gas meter, with a well-kept lawn and a wooden fence in the background. As the video continues, the number of units increases to four, and the condition of the pipes and electrical boxes varies, indicating regular upkeep. A weathered white gas valve and a rusted red brick wall with a white electrical box are also featured, alongside a neatly trimmed bush and a parked car, suggesting a suburban setting."
+                prompt: "The video shows a series of residential scenes, focusing on the maintenance of air conditioning units and utility boxes. Initially, two gray air conditioners are seen on a concrete slab, connected to a white electrical box and a gas meter, with a well-kept lawn and a wooden fence in the background. As the video continues, the number of units increases to four, and the condition of the pipes and electrical boxes varies, indicating regular upkeep. A weathered white gas valve and a rusted red brick wall with a white electrical box are also featured, alongside a neatly trimmed bush and a parked car, suggesting a suburban setting."
             },
             {
                 url: "assets/si2v/0a415152.mp4",
